zebra-state/src/service/finalized_state/disk_format/tests/snapshots/block_info_raw_data@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009c060000010000000000000000000000",
  ),
  KV(
    k: "000001",
    v: "24f40000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000051060000010000000000000000000000",
  ),
  KV(
    k: "000002",
    v: "6cdc0200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000051060000010000000000000000000000",
  ),
]
