zebra-state/src/service/finalized_state/disk_format/tests/snapshots/empty_column_families@testnet_0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: empty_column_families
---
[
  "balance_by_transparent_addr: no entries",
  "history_tree: no entries",
  "ironwood_note_commitment_subtree: no entries",
  "ironwood_nullifiers: no entries",
  "orchard_note_commitment_subtree: no entries",
  "orchard_nullifiers: no entries",
  "sapling_note_commitment_subtree: no entries",
  "sapling_nullifiers: no entries",
  "snapshot_data_by_date: no entries",
  "sprout_nullifiers: no entries",
  "transparent_addr_by_balance: no entries",
  "tx_loc_by_spent_out_loc: no entries",
  "tx_loc_by_transparent_addr_loc: no entries",
  "utxo_by_out_loc: no entries",
  "utxo_loc_by_transparent_addr_loc: no entries",
]
